--- a/README.adoc
+++ b/README.adoc
@@ -1,6 +1,8 @@
-# developer-roadmap-2020
+= developer-roadmap-2020
 We will add developer-roadmap-2020 material to this repository, which will be started in April and start for engineering growth. Until completion I'm planning a year.
 
-link:frontend/index.html[frontend]
-link:backend/index.html[backend]
-link:devops/index.html[devops]
+== directories
+
+== libraries & usage
+* github pages
+* asciidoc
